--- a/_common_resources/styles/startribune_dataviz_styles.css
+++ b/_common_resources/styles/startribune_dataviz_styles.css
@@ -218,13 +218,13 @@
   .legend label, .legend span { display:block; float:left; height:15px; width:35px; text-align:center; font-size:12px; color:#808080; font-family:"Benton Sans",Helvetica,Arial,sans-serif; }
 
 /*SEARCH BOX FILTERS*/
-  #filter { font-family:"Benton Sans"; font-size:.9em;}
-  #filter input { width: 95% !important; padding: 0 10px 0 10px; font-family:"Benton Sans"; border-radius:5px !important; margin:0; width:100%; height:30px; line-height:120%; font-size: 1em; -webkit-appearance: none;
+  #filter { font-family:"Benton Sans"; font-size:.9em; width: 100% !important;}
+  #filter input { width: 100% !important; padding: 0 10px 0 10px; font-family:"Benton Sans",Helvetica,Arial,sans-serif !important; border-radius:5px !important; margin:0; width:100%; height:30px; line-height:120%; font-size: 1em; -webkit-appearance: none;
     -webkit-border-radius:0; border-radius:0; box-shadow: inset 0 1px 2px rgba(0,0,0,0.1); color: rgba(0,0,0,0.75);  -webkit-transition: all 0.30s ease-in-out; -moz-transition: all 0.30s ease-in-out; -ms-transition: all 0.30s ease-in-out; -o-transition: all 0.30s ease-in-out; background-color: #fff !important; font-family: inherit; border: 1px solid #eee !important; 
     background-size: 14px 14px;
     background-repeat: no-repeat; 
     background-position: 98% 50%; }
-  #filter input:focus { width: 95% !important; font-family:"Benton Sans"; box-shadow: 0 0 5px #999; padding: 1px 10px 1px 10px; border: 1px solid #61bd1a; }
+  #filter input:focus { width: 100% !important; font-family:"Benton Sans",Helvetica,Arial,sans-serif !important; box-shadow: 0 0 5px #999; padding: 1px 10px 1px 10px; border: 1px solid #61bd1a; }
 
 /*VARIOUS TITLES AND CHATTER*/
   .chartTitle { font-family:"Benton Sans",Helvetica,Arial,sans-serif !important; font-weight:900; margin-top:15px; font-size:1.2em; }
@@ -292,6 +292,8 @@
   .myButton5 { background-color:#61bd1a; -moz-border-radius:0; -webkit-border-radius:0; border-radius:0; border:0;  display:inline-block; cursor:pointer; color:#000; font-family:arial; font-size:1em; padding:13px 26px; text-decoration:none; font-weight:900; } 
   .myButton5:active { background-color:#5cbf2a; }
   .myButton5:hover { background-color:#5cbf2a !important; }
+  .switch { padding:10px; display:inline-block; text-align:center; width:127px; background-color:#fff; font-weight:900; font-family:"Benton Sans",Helvetica,Arial,sans-serif; border:1px solid black;  margin-top:4px; }
+  .switch:hover, .selected { background-color:#333 !important; color:#fff !important; cursor:pointer; margin-bottom:4px; }
 
 /*SECONDARY TOGGLE BUTTONS*/
   .myButton_ { background-color:#8B2219; -moz-border-radius:0; -webkit-border-radius:0; border-radius:0; border:0; display:inline-block; cursor:pointer; color:#ffffff; font-family:arial; font-size:12px; padding:3px 5px; text-decoration:none; font-weight:900; }
@@ -300,7 +302,7 @@
 /*KILL BUTTON FOCUS BORDER*/
    button:focus { outline:0 !important; }
    :focus { outline:0; }
-
+   
 /*BREAKER*/
   .breaker { clear:both; margin:7px; padding:10px; }
 
@@ -347,20 +349,25 @@
   *, *:after, *:before { box-sizing:border-box; margin:0; moz-box-sizing:border-box; padding:0; webkit-box-sizing:border-box; }
   ::selection { background:transparent; }
   ::-moz-selection { background:transparent; }
-  .wrapper-demo { font-weight:400; zoom:1; z-index:999; display:inline-block; }
+  .wrapper-demo { font-weight:400; zoom:1; z-index:999; display:inline-block; width:100%; }
   .wrapper-demo:after { clear:both; content:""; display:table; }
-  .wrapper-dropdown-1 { display:inline-block; font-family:"Benton Sans",Helvetica,Arial,sans-serif; z-index:900; background:#ddd; color:#333; cursor:pointer; font-weight:bold; outline:none; padding:10px; position:relative; width:200px; }
+  .wrapper-dropdown-1 { display:inline-block;font-family:"Benton Sans",Helvetica,Arial,sans-serif;z-index:900;background:#ddd;color:#333;cursor:pointer;font-weight:bold;outline:none;padding:8px;position:relative;width:200px;border:1px solid #aaa;box-shadow:0 2px 1px rgba(0, 0, 0, 0.10);font-size:14px; width:100%; }
   .wrapper-dropdown-1:after { border-color:transparent #333; border-style:solid; border-width:6px 0 6px 6px; content:""; height:0; margin-top:-6px; position:absolute; right:16px; top:50%; width:0; }
-  .wrapper-dropdown-1 .dropdown { background:#fff; font-weight:normal; left:0; list-style:none; opacity:0; pointer-events:none; position:absolute; right:0; top:100%; }
+  .wrapper-dropdown-1 .dropdown { font-weight:normal;left:0;list-style:none;opacity:0;pointer-events:none;position:absolute;right:0;top:100%;border:1px solid #aaa;background:#fff;box-shadow:0 4px 5px rgba(0, 0, 0, 0.15);margin-top:0px !important;  }
   .wrapper-dropdown-1 .dropdown li a { color:#9e9e9e; display:block; padding:10px 20px; text-decoration:none; }
   .wrapper-dropdown-1 .dropdown li:hover a { background:#ddd; }
+  .wrapper-dropdown-1 .dropdown { font-weight:normal;left:0;list-style:none;opacity:0;pointer-events:none;position:absolute;right:0;top:100%;border:1px solid #aaa;background:#fff;box-shadow:0 4px 5px rgba(0, 0, 0, 0.15);margin-top:0px !important; }
+  .wrapper-dropdown-1 .dropdown li:hover a { background:#EFEFEF; }
   .wrapper-dropdown-1.active .dropdown { opacity:1; pointer-events:auto; }
   .wrapper-dropdown-1.active:after { border-color:#333 transparent; border-width:6px 6px 0 6px; margin-top:-3px; }
   .wrapper-dropdown-1.active { background:#ddd; background:linear-gradient(to right, #ddd 0%,#ddd 78%,#ffffff 78%,#ffffff 100%); background:-moz-linear-gradient(left, #9bc7de 0%, #9bc7de 78%, #ffffff 78%, #ffffff 100%); background:-ms-linear-gradient(left, #ddd 0%,#ddd 78%,#ffffff 78%,#ffffff 100%); background:-o-linear-gradient(left, #ddd 0%,#ddd 78%,#ffffff 78%,#ffffff 100%); background:-webkit-gradient(linear, left top, right top, color-stop(0%,#ddd), color-stop(78%,#ddd), color-stop(78%,#ffffff), color-stop(100%,#ffffff)); background:-webkit-linear-gradient(left, #ddd 0%,#ddd 78%,#ffffff 78%,#ffffff 100%); filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#9bc7de', endColorstr='#ffffff',GradientType=1 ); }
+  ul.dropdown.months { box-sizing:border-box;margin:0;moz-box-sizing:border-box;padding:0;webkit-box-sizing:border-box;margin-top:-1px;border-radius:0 0 4px 4px;background-clip:padding-box; }
   .no-opacity .wrapper-dropdown-1 .dropdown,
   .no-pointerevents .wrapper-dropdown-1 .dropdown { display:none; opacity:1; pointer-events:auto; }
   .no-opacity .wrapper-dropdown-1.active .dropdown,
   .no-pointerevents .wrapper-dropdown-1.active .dropdown { display:block; }
+  header[role="banner"] { width:100%;height:40px;z-index:1000;background:#f0f0f0; }
+
 
 /*DOWNLOAD BUTTON STYLES*/
   .downloadButton { font-family:"Benton Sans",Helvetica,Arial,sans-serif; font-weight:bold; color:#333333; border:none; font-size:.9em; text-align:center; margin-top:15px; margin-left:1%; padding-top:10px; width: 99%; background-color:#fff; color:#333; border-top: 1px solid #ccc; background-size: 20px 20px; background-repeat: no-repeat; background-position: 2% 50%; }
@@ -470,6 +477,17 @@
   .neutral { fill:#F7F7F7; background-color:#F7F7F7; }
   .dflLight { fill:#67B4C2; background-color:#67B4C2; }
   .dflDark { fill:#0D4673; background-color:#0D4673; }
+  .republican { color:#9C0004; fill:#9C0004 !important; pointer-events: all; font-weight:bold; }
+  .r1 { background-color:#FF8572; fill:#FF8572 !important; color:white !important; pointer-events: all; font-weight:bold; }
+  .r2 { background-color:#F2634C; fill:#F2634C !important; color:white !important; pointer-events: all; font-weight:bold; }
+  .r3 { background-color:#9C0004; fill:#9C0004 !important; color:white !important; pointer-events: all; font-weight:bold; }
+  .r4 { background-color:#4E0002; fill:#4E0002 !important; color:white !important; pointer-events: all; font-weight:bold; }
+  .mid { background-color:#ddd; fill:#ddd !important; color:black !important; pointer-events: all; font-weight:bold; }
+  .democrat { color:#0D4773; fill:#0D4773 !important; pointer-events: all; font-weight:bold; }
+  .d1 { background-color:#67B4C2; fill:#67B4C2 !important; color:white !important; pointer-events: all; font-weight:bold; }
+  .d2 { background-color:#4192A1; fill:#4192A1 !important; color:white !important; pointer-events: all; font-weight:bold; }
+  .d3 { background-color:#0D4773; fill:#0D4773 !important; color:white !important; pointer-events: all; font-weight:bold; }
+  .d4 { background-color:#022642; fill:#022642 !important; color:white !important; pointer-events: all; font-weight:bold; }
 
 /*background-colorBLIND SAFE DIVERGENCE RAMP*/
   .negDark { fill:#271D42; background-color:#271D42; color:#fff; }
