--- a/_common_resources/styles/startribune_dataviz_styles.css
+++ b/_common_resources/styles/startribune_dataviz_styles.css
@@ -213,6 +213,8 @@
   body { overflow-x:hidden; }
   a { color:#ccc; text-decoration:none; }
   a:hover { color:#333; }
+  .byline { font-family:"Benton Sans",Helvetica,Arial,sans-serif; font-weight:900; color:#888; }
+  .byline a { color:#888; }
 
 /*COLOR LEGENDS*/
   .legend label, .legend span { display:block; float:left; height:15px; width:35px; text-align:center; font-size:12px; color:#808080; font-family:"Benton Sans",Helvetica,Arial,sans-serif; }
