--- a/_common_resources/styles/startribune_dataviz_styles.css
+++ b/_common_resources/styles/startribune_dataviz_styles.css
@@ -255,7 +255,7 @@
   .background { fill: none; pointer-events: all; }
   .states { fill: #aaa; }
   #state-borders { fill: none; stroke: #fff; stroke-width: 2px; stroke-linejoin: round; stroke-linecap: round; pointer-events: none; } 
-  .tooltip{ font-family:"Benton Sans",Helvetica,Arial,sans-serif;  background-color:rgba(255,255,255,1); height: auto; width: auto; padding:10px; -webkit-border-radius:10px; -moz-border-radius:10px; border-radius:0; border: 1px solid black; font-size:13px; font-family:Arial; }
+  .tooltip{ font-family:"Benton Sans",Helvetica,Arial,sans-serif;  background-color:rgba(255,255,255,1); height: auto; width: auto; padding:10px; border-radius:0; border: 1px solid black; font-size:13px; font-family:Arial; }
   .states .active { fill: #333 !important; fill-opacity: 1 !important; }
   .faded { fill-opacity: 0.5 !important; }
   .states path:hover { fill:#333 !important; cursor:pointer;}
