--- a/20170212-absentee_students/builds/development/css/style.css
+++ b/20170212-absentee_students/builds/development/css/style.css
@@ -2695,3 +2695,46 @@ th {
   fill: #000;
   /*  font-size: 28px !important;*/
 }
+
+body { overflow-x:hidden; font-family: "Benton Sans",Helvetica,Arial,sans-serif !important; }
+#wrapper { width:500px; margin-left:auto; margin-right:auto; }
+#topChatter { height:120px; }
+.block { width:20%; height:26px; display:inline-block; border:1px solid #ffffff; }
+.block:hover { opacity:0.8; }
+#topAxis { margin-bottom:15px; }
+.topLabel { display:inline-block; font-weight:900; vertical-align:top; }
+#gradeAxis { float:left; }
+#grid { float:right; width:88%; text-align:center; }
+.gradeLabel { width:auto; height:23px; margin-top:5px; border: 1px solid #fff; display: block; }
+.raceAxis .block { border:1px solid #ffffff; width:20%; height:auto; text-align:center; }
+.raceAxis .block:hover { opacity:1; cursor:default; }
+.pct { font-weight:900; }
+.legendBox {  margin-left:20px; text-align:center; }
+.legends { margin-left:auto; margin-right:auto; width:500px; }
+.legendContainer { margin-right:auto; margin-left:auto; width:100%; height:40px; text-align:center; padding-left:20%; }
+#rightSide { width:88%; float:right; text-align:right; }
+.grade { font-weight:900; }
+#tracker { padding-top:10px; text-align:center; }
+.trackDot { border-radius:50%; width:10px; height:10px; display:inline-block; margin:6px; background-color:#ddd; }
+.trackDot:hover, .current { background-color:#333; cursor:pointer; }
+.chatter { height:80px; }
+.fadeout { opacity:0; transition: opacity .50s ease-in-out; -moz-transition: opacity .50s ease-in-out; -webkit-transition: opacity .50s ease-in-out; }
+.play { background-color:#fff !important; color:#000; }
+.pause { background-color:#fff !important; color:#000; }
+#toggle { margin:0; padding:0; width:80px; height:35px; font-size:2em; -moz-border-radius:0; -webkit-border-radius:0; border-radius:0; border:0; font-weight:900; margin-left:auto; margin-right:auto; display:block; text-align:center; }
+#toggle:hover { background-color:#ffffff !important; opacity:0.8; cursor:pointer; }
+.navButtons { display:block; text-align:center; background-color:#fff !important; width:40px; font-size:2em; -moz-border-radius:0; -webkit-border-radius:0; border-radius:0; border:0; font-weight:900; }
+.navButtons:hover { opacity:0.8; cursor:pointer; }
+.previous { float:left; }
+.next { float:right; }
+.gray6 { background-color:#000000; }
+#grades { padding-top:1.1px; }
+@media (max-width:500px) {
+  #wrapper { width:100%; }
+  .block, .topLabel { font-size:0.8em; }
+  .pct { font-size:1em; padding:10px; }
+  .gradeLabel { height:24px; margin-top:4px; }
+  #grades { display:none; }
+  #gradeAxis { margin-top:44px; }
+  #mobileHide { display:none; }
+}
