--- a/20170305-housing_recovery/components/css/style.css
+++ b/20170305-housing_recovery/components/css/style.css
@@ -5268,8 +5268,12 @@ a.ui-button:active,
 }
 
 #cities {
-     height:407px;
+     height:335px;
      overflow-y:auto;
+}
+
+#reference {
+  vertical-align:top;
 }
 
 .row { 
@@ -5301,6 +5305,10 @@ a.ui-button:active,
 
 .name { 
   width:83%; 
+}
+
+#legendContainer {
+  float:left;
 }
 
 .score {
@@ -5336,7 +5344,7 @@ h5 {
 }
 
 .metricCol div {
-  padding:5px;
+  padding:1px;
 }
 
 .metric {
@@ -5352,7 +5360,7 @@ h5 {
 }
 
 #chart, #chart svg {
-  height:230px;
+  height:200px;
 }
 
 #chart .c3-line {
@@ -5382,6 +5390,53 @@ h5 {
 
 .mapboxgl-ctrl-icon.mapboxgl-ctrl-compass { 
   display:none !important;
+}
+
+.onoffswitch {
+    float:right;
+    position: relative; width: 187px;
+    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+}
+.onoffswitch-checkbox {
+    display: none;
+}
+.onoffswitch-label {
+    display: block; overflow: hidden; cursor: pointer;
+    border: 2px solid #999999; border-radius: 20px;
+}
+.onoffswitch-inner {
+    display: block; width: 200%; margin-left: -100%;
+    transition: margin 0.3s ease-in 0s;
+}
+.onoffswitch-inner:before, .onoffswitch-inner:after {
+    display: block; float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
+    font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
+    box-sizing: border-box;
+}
+.onoffswitch-inner:before {
+    content: "CITIES/TOWNS";
+    padding-left: 10px;
+    background-color: #A50F15; color: #FFFFFF;
+}
+.onoffswitch-inner:after {
+    content: "NEIGHBORHOODS";
+    padding-right: 10px;
+    background-color: #EEEEEE; color: #999999;
+    text-align: right;
+}
+.onoffswitch-switch {
+    display: block; width: 28px; margin: 1px;
+    background: #FFFFFF;
+    position: absolute; top: 0; bottom: 0;
+    right: 153px;
+    border: 2px solid #999999; border-radius: 20px;
+    transition: all 0.3s ease-in 0s; 
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+    margin-left: 0;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+    right: 0px; 
 }
 
 @media only screen and (max-width:840px)  {
