--- a/20170615-zebra/components/css/style.css
+++ b/20170615-zebra/components/css/style.css
@@ -293,7 +293,7 @@ a:hover {
 
 .chatter {
   font-family: "Benton Sans", Helvetica, Arial, sans-serif !important;
-  font-size: .9em;
+  font-size: 1.2em;
   margin-top: 5px;
 }
 
