--- a/20170514-farmers_markets/components/sass/_st_base.scss
+++ b/20170514-farmers_markets/components/sass/_st_base.scss
@@ -101,7 +101,7 @@
   .breaker { clear:both; margin:7px; padding:10px; }
 
 /*RESET BUTTON*/
-  .zoom{ text-decoration:none; font-weight:normal !important; color:steelblue; float:right !important; font-family: $bentonSans !important; }
+  //.zoom{ text-decoration:none; font-weight:normal !important; color:steelblue; float:right !important; font-family: $bentonSans !important; }
   .zoom:hover { cursor:pointer; }
 
 /*CONTENT WRAPPER*/
