--- a/20170514-farmers_markets/builds/development/css/style.css
+++ b/20170514-farmers_markets/builds/development/css/style.css
@@ -2832,9 +2832,17 @@ ul.dropdown.months {
   width: 100%;
 }
 
-.zoom {
+.zoom, .clear, .showing {
   text-align: left !important;
   padding: 3px;
+}
+
+.zoom:hover, .clear:hover, .showing:hover {
+  cursor: pointer;
+}
+
+.number {
+  font-weight: 900;
 }
 
 input {
