--- a/20170615-zebra/builds/development/css/style.css
+++ b/20170615-zebra/builds/development/css/style.css
@@ -1679,7 +1679,8 @@ body {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
-.map-overlay h2, .map-overlay p {
+.map-overlay h2,
+.map-overlay p {
   margin: 0 0 10px;
 }
 
@@ -1699,6 +1700,10 @@ body {
 
 #diverse {
   color: #299129;
+}
+
+.mapboxgl-ctrl-icon.mapboxgl-ctrl-compass {
+  display: none !important;
 }
 
 #toggle {
@@ -1764,7 +1769,8 @@ body {
   background-color: #ddd;
 }
 
-.trackDot:hover, .current {
+.trackDot:hover,
+.current {
   background-color: #333;
   cursor: pointer;
 }
